--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -38,7 +38,7 @@ body {
 #navigation {
   text-align: center;
   background: #666;
-  height: 45px;
+  height: auto;
 }
 #navigation .menu {
   float: none;
