--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -65,7 +65,7 @@ body {
   max-width: 100%;
   width: auto;
   display: block;
-  text-align: left;
+  text-align: center;
   position: absolute;
   width: 100%;
 }
