--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -65,12 +65,14 @@ body {
   max-width: 100%;
   width: auto;
   display: block;
-  text-align: left;
+  text-align: center;
   position: absolute;
+  width: 100%;
 }
 
 .firstpost img {
   width: 900px;
+  float: none;
 }
 
 .featuredBox {
@@ -88,4 +90,30 @@ body {
   display: none;
 }
 
-/* CONTENT */
+/* GET RID OF MARGINS */
+
+.main-header {
+  max-width: none;
+}
+#header {
+  padding: 0;
+  width: 100%;
+}
+
+.main-container {
+  width: auto;
+  max-width: none;
+}
+
+#page {
+  max-width: none;
+}
+
+.sidebar, .sidebar.c-4-12 {
+  max-width: none;
+}
+
+.single_post {
+  max-width: 960px;
+  margin: 0 auto;
+}
