--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -78,15 +78,56 @@ body {
 .featuredBox {
   text-align: center;
   position: relative;
-  height: 450px;
+  height: 50vw;
+  width: 100%;
+  margin: 0 auto;
+  padding: 24px 0 0 0;
 }
 
-.featured-excerpt {
+.tonyBox {
+  text-align: center;
+  transition: 0.5s all ease-in-out;
+  position: absolute;
+  height: 50vw;
+  width: 100%;
+}
+
+.tonyBox > img {
   display: none;
 }
 
-.secondpost,
-.thirdpost {
+.tonyImage {
+  display: block;
+  height: 50vw;
+  width: 100%;
+  max-width: 900px;
+  background: transparent no-repeat center center;
+  background-size: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.tonyCircleContainer {
+  margin-top: 10px;
+  width: 100%;
+  z-index: 100;
+  text-align: center;
+}
+
+.tonyCircle {
+  display: inline-block;
+  z-index: 100;
+  border-radius: 50%;
+  border: #252525 solid 5px;
+  width: 10px;
+  height: 10px;
+}
+
+.circleSelected {
+  background: #252525;
+}
+
+.featured-excerpt {
   display: none;
 }
 
@@ -119,3 +160,8 @@ body {
 }
 
 /* MISC */
+@media (max-width: 1000px) {
+  .socialmediabuttons {
+    display: none;
+  }
+}
