--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -2,7 +2,7 @@
  Theme Name:   Point Child
  Theme URI:    
  Description:  Point Child Theme
- Author:       Qingyang Chen
+ Author:       Qingyang Chen, Tony Jiang
  Author URI:   
  Template:     point
  Version:      0.0.1
@@ -13,6 +13,17 @@
 
 @import url("../point/style.css");
 
+@font-face {
+    font-family: 'League Gothic';
+    src: url('fonts/leaguegothic-regular-webfont.eot');
+    src: url('fonts/leaguegothic-regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('fonts/leaguegothic-regular-webfont.woff') format('woff'),
+         url('fonts/leaguegothic-regular-webfont.ttf') format('truetype'),
+         url('fonts/leaguegothic-regular-webfont.svg#league_gothicregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 /* =Theme customization starts here
 -------------------------------------------------------------- */
@@ -22,6 +33,23 @@ body {
   font-weight: 300;
 }
 
+/* TONY'S NAVBAR EDITS */
+@media screen and (min-width:866px) {
+  #navigation {
+    height: 50px!important;
+  }
+  #navigation .menu {
+    border: 0;
+  }
+
+  .secondary-navigation a {
+    border: 0;
+    font-family: "League Gothic", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 32px;
+    letter-spacing: 0.01em;
+    padding: 5px 30px 0 30px!important;
+  }
+}
 
 /* NAVIGATION */
 
@@ -37,18 +65,27 @@ body {
 
 #navigation {
   text-align: center;
-  background: #666;
+  background: #000000;
   height: auto;
 }
 #navigation .menu {
   float: none;
   display: inline-block;
+  height: 100%;
 }
 .secondary-navigation a {
   border-right: 0;
+  height: 100%;
+}
+#navigation ul li {
+  height: 100%;
 }
 #navigation > ul li:last-child a {
-  border-right: 1px solid #E2E2E2;
+  /* border-right: 1px solid #E2E2E2; */
+}
+
+#navigation > ul li:first-child a {
+  border: 0;
 }
 
 .featured-thumbnail.sponsored {
