--- a/wp-content/themes/point-child/style.css
+++ b/wp-content/themes/point-child/style.css
@@ -48,6 +48,7 @@ body {
   .secondary-navigation a {
     border: 0;
     font-family: "League Gothic", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-size: 24px;
     letter-spacing: 0.01em;
     padding: 5px 30px 0 30px!important;
   }
